--- a/src/main/webapp/help-ncserverurl.html
+++ b/src/main/webapp/help-ncserverurl.html
@@ -1,3 +1,3 @@
 <div>
-    <span class="smallNote">like <kbd>https://acunetix360.com</kbd>.</span>
+    <span class="smallNote">like <kbd>https://online.acunetix360.com</kbd>.</span>
 </div>
